remove specific config for openCV in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 set (CMAKE_CXX_STANDARD 11)
 
-find_package( OpenCV 3 REQUIRED PATHS "/homes/thuxohl/tools/opencv_install" )
+find_package( OpenCV 3 REQUIRED)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 find_package(Boost COMPONENTS system filesystem program_options REQUIRED)
